--- a/css/style-menu-navbar-2019.css
+++ b/css/style-menu-navbar-2019.css
@@ -123,11 +123,12 @@
 		  word-spacing: normal;			 
 		  border-radius: 1px;
 		  cursor: pointer; 			 
-		  margin-right: 1%; 
-		  margin-left: 1%;
-          margin-top: 1%;		  
-          margin-bottom: 1%; 		  
-		  padding: 10px; 
+		  margin-top: 1%;
+		  padding: 1%; 
+	      padding-top: 1%; 
+	      padding-right: 1%; 
+		  padding-left: 1%;
+          list-style: none;
           max-width: 100%; 
 		  min-width: 10%;	
           height: auto; 		  
@@ -193,7 +194,7 @@
 	toggle { display: inline-block; 	
 		     background-color: #f1f1f1;  /* branco */
 	         color: #555555;  /* cinza medio */
-	         overflow: hidden;
+	         overflow: auto;
 	         }								   
 	
 /* ================================================================================ */
@@ -203,7 +204,8 @@
 	collapse{ color: #005aff; /* cor azul royal */ 
 	          border-top: 1px transparent; 
 			  display: block !important;
-	          box-shadow: inset 0 1px 0 rgba(255,255,255,0.1); 
+	          box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+              overflow: auto;			  
 			  }  
 									
 /* ================================================================================ */
@@ -219,7 +221,7 @@
                -moz-border-radius: 6px 0 6px 6px;
 			   text-shadow:0px 0px 5px #fff;
 			   border-radius: 6px 0 6px 6px; 
-	           top: 0; left: 100%; }
+	           top: 0; left: 100%; overflow: auto; }
 	                        
     /* submenu, definindo a sua posição como absoluta(postition:absolute;),
        para que os itens do submenu não ultrapassem o seu menu pai e para
@@ -230,6 +232,7 @@
 					color: #000000;
                     display: inline;
 			        float: left;
+					overflow: auto;
                     }   
 
     /* Exibir o submenu */
@@ -248,7 +251,7 @@
                             text-shadow:0px 0px 5px #ffffff; 
                             }
 
-    dropdown pull-left { float: none; } /* menu flutuante puxado para a esquerda */
+    dropdown pull-left { float: left; } /* menu flutuante puxado para a esquerda */
 	
 	
 /* ================================================================================ */
@@ -257,14 +260,14 @@
 	
     /* Add a black background color to the top navigation */
     topnav { background-color: #333333; /* preto */
-	         overflow: hidden;}
+	         overflow: auto;}
 
     /* Style the links inside the navigation bar */
     topnav a { float: left; 
 	           display: block; 
 			   color: #f2f2f2; /* cor cinza prata muito claro */
 			   text-align: center;
-               padding: 14px 16px; 
+               padding: 14px auto; 
 			   text-decoration: none; 
 			   font-size: medium;
 			   }
